design welcom page

--- a/wedstrijd/public/css/base.css
+++ b/wedstrijd/public/css/base.css
@@ -16,6 +16,19 @@
     background-color: #fff;
     color: #fff; }
 
+.win-prizes {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin-top: -100px;
+  margin-left: -125px;
+  opacity: 0.9;
+  -ms-transform: rotate(-35deg);
+  /* IE 9 */
+  -webkit-transform: rotate(-35deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(-35deg); }
+
 .img-banner {
   position: absolute;
   max-width: 100%;
@@ -27,6 +40,16 @@
 
 .prizes {
   text-align: left; }
+
+.play {
+  position: absolute;
+  max-width: 50%;
+  min-height: 50%;
+  bottom: 0;
+  right: 0; }
+
+.prizes-list {
+  margin-top: 50px; }
 
 #app .navbar {
   background-color: #333333;
