--- a/wedstrijd/public/css/base.css
+++ b/wedstrijd/public/css/base.css
@@ -1,3 +1,20 @@
+body {
+  background: url(../image/s2WyVe.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
+.banner-code {
+  background-color: #fff;
+  color: #333; }
+  .banner-code h1 {
+    text-align: center; }
+  .banner-code p {
+    text-align: center; }
+  .banner-code h2 {
+    padding-top: 150px; }
+
 .banner {
   min-height: 600px;
   min-width: 100%;
@@ -53,6 +70,7 @@
 
 #app .navbar {
   background-color: #333333;
+  border: 1px solid #333;
   font-size: 1.5em; }
   #app .navbar a {
     text-transform: uppercase;
@@ -63,7 +81,9 @@
       background-color: rgba(255, 255, 255, 0.2);
       color: white; }
   #app .navbar .navbar-brand {
-    color: #ac2925;
-    font-size: 1.5em; }
+    color: #ac2925; }
+    #app .navbar .navbar-brand img {
+      margin-top: -10px;
+      max-height: 50px; }
 
 /*# sourceMappingURL=base.css.map */
