--- a/wedstrijd/public/css/base.scss
+++ b/wedstrijd/public/css/base.scss
@@ -1,13 +1,36 @@
-.banner{
+body {
+
+  background: url(../image/s2WyVe.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.banner-code {
+
+  background-color: #fff;
+  color: #333;
+  h1 {
+    text-align: center;
+  }
+  p{
+    text-align: center;
+  }
+  h2 {
+    padding-top: 150px;
+  }
+}
+
+.banner {
   min-height: 600px;
   min-width: 100%;
   background-color: #333333;
   color: #fff;
   margin-top: 150px;
- text-align: center;
+  text-align: center;
 
-
-  h1{
+  h1 {
     background-color: #333;
     color: #ac2925;
     text-transform: uppercase;
@@ -16,13 +39,14 @@
 
     border: 10px solid #333;
   }
-  hr{
+  hr {
     background-color: #fff;
     color: #fff;
   }
 }
+
 $grade: -35deg;
-.win-prizes{
+.win-prizes {
   position: absolute;
   left: 0;
   top: 0;
@@ -33,7 +57,8 @@ $grade: -35deg;
   -webkit-transform: rotate($grade); /* Chrome, Safari, Opera */
   transform: rotate($grade);
 }
-.img-banner{
+
+.img-banner {
   position: absolute;
   max-width: 100%;
   min-height: 100%;
@@ -42,45 +67,51 @@ $grade: -35deg;
   left: 0;
   right: 0;
 }
-.prizes{
+
+.prizes {
   text-align: left;
 }
-.play{
 
-    position: absolute;
-    max-width: 50%;
-    min-height: 50%;
-    bottom: 0;
-    right: 0;
+.play {
+
+  position: absolute;
+  max-width: 50%;
+  min-height: 50%;
+  bottom: 0;
+  right: 0;
 
 }
-.prizes-list{
 
-margin-top: 50px;
+.prizes-list {
+
+  margin-top: 50px;
 }
 
-#app{
-  .navbar{
+#app {
+  .navbar {
 
     background-color: #333333;
-
-
+    border: 1px solid #333;
     font-size: 1.5em;
-    a{
+    a {
       text-transform: uppercase;
       padding-top: 25px;
 
       min-height: 75px;
-      color: rgba(255,255,255,.7);
+      color: rgba(255, 255, 255, .7);
 
-      &:hover{
-        background-color: rgba(255,255,255,.2);
-        color: rgba(255,255,255,1);
+      &:hover {
+        background-color: rgba(255, 255, 255, .2);
+        color: rgba(255, 255, 255, 1);
       }
     }
-    .navbar-brand{
+    .navbar-brand {
       color: #ac2925;
-      font-size: 1.5em;
+
+      img {
+        margin-top: -10px;
+        max-height: 50px;
+      }
     }
   }
 
