--- a/cocaCola/public/css/base.css
+++ b/cocaCola/public/css/base.css
@@ -1,89 +1,65 @@
-body {
-  background: url(../image/s2WyVe.png) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
+/*
+Error: Invalid CSS after "...kground-color: ": expected expression (e.g. 1px, bold), was "#;"
+        on line 22 of base.scss
 
-.banner-code {
-  background-color: #fff;
-  color: #333; }
-  .banner-code h1 {
-    text-align: center; }
-  .banner-code p {
-    text-align: center; }
-  .banner-code h2 {
-    padding-top: 150px; }
+17:     text-align: center;
+18:   }
+19:   p{
+20:     text-align: center;
+21:     &:active{
+22:       background-color: #;
+23:     }
+24:   }
+25:   h2 {
+26:     padding-top: 150px;
+27:   }
 
-.banner {
-  min-height: 600px;
-  min-width: 100%;
-  background-color: #333333;
-  color: #fff;
-  margin-top: 150px;
-  text-align: center; }
-  .banner h1 {
-    background-color: #333;
-    color: #ac2925;
-    text-transform: uppercase;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    border: 10px solid #333; }
-  .banner hr {
-    background-color: #fff;
-    color: #fff; }
-
-.win-prizes {
-  position: absolute;
-  left: 0;
-  top: 0;
-  margin-top: -100px;
-  margin-left: -125px;
-  opacity: 0.9;
-  -ms-transform: rotate(-35deg);
-  /* IE 9 */
-  -webkit-transform: rotate(-35deg);
-  /* Chrome, Safari, Opera */
-  transform: rotate(-35deg); }
-
-.img-banner {
-  position: absolute;
-  max-width: 100%;
-  min-height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0; }
-
-.prizes {
-  text-align: left; }
-
-.play {
-  position: absolute;
-  max-width: 50%;
-  min-height: 50%;
-  bottom: 0;
-  right: 0; }
-
-.prizes-list {
-  margin-top: 50px; }
-
-#app .navbar {
-  background-color: #333333;
-  border: 1px solid #333;
-  font-size: 1.5em; }
-  #app .navbar a {
-    text-transform: uppercase;
-    padding-top: 25px;
-    min-height: 75px;
-    color: rgba(255, 255, 255, 0.7); }
-    #app .navbar a:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      color: white; }
-  #app .navbar .navbar-brand {
-    color: #ac2925; }
-    #app .navbar .navbar-brand img {
-      margin-top: -10px;
-      max-height: 50px; }
-
-/*# sourceMappingURL=base.css.map */
+Backtrace:
+base.scss:22
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1189:in `expected'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/script/lexer.rb:229:in `expected!'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/script/parser.rb:704:in `assert_expr'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/script/parser.rb:75:in `parse'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1051:in `sass_script'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:897:in `value!'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:769:in `block in try_declaration'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1165:in `call'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1165:in `rethrow'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:782:in `try_declaration'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:711:in `declaration_or_ruleset'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:676:in `block_child'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:665:in `block_contents'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:657:in `block'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:726:in `declaration_or_ruleset'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:676:in `block_child'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:668:in `block_contents'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:657:in `block'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:726:in `declaration_or_ruleset'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:676:in `block_child'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:668:in `block_contents'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:657:in `block'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:649:in `ruleset'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:675:in `block_child'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:668:in `block_contents'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:125:in `stylesheet'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:41:in `parse'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/engine.rb:406:in `_to_tree'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+C:/Ruby22/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"...kground-color: \": expected expression (e.g. 1px, bold), was \"#;\"\A         on line 22 of base.scss\A \A 17:     text-align: center;\A 18:   }\A 19:   p{\A 20:     text-align: center;\A 21:     &:active{\A 22:       background-color: #;\A 23:     }\A 24:   }\A 25:   h2 {\A 26:     padding-top: 150px;\A 27:   }"; }
