--- a/cocaCola/public/css/base.scss
+++ b/cocaCola/public/css/base.scss
@@ -6,7 +6,9 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
-
+.message{
+  font-size: 35px;
+}
 .banner-code {
 
   background-color: #fff;
@@ -16,6 +18,9 @@ body {
   }
   p{
     text-align: center;
+    &:active{
+      background-color: #;
+    }
   }
   h2 {
     padding-top: 150px;
@@ -23,12 +28,13 @@ body {
 }
 
 .banner {
-  min-height: 600px;
+  min-height: 100%;
   min-width: 100%;
   background-color: #333333;
   color: #fff;
   margin-top: 150px;
   text-align: center;
+  padding-bottom: 100px;
 
   h1 {
     background-color: #333;
