--- a/cocaCola/public/css/base.scss
+++ b/cocaCola/public/css/base.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .banner-code {
-
+  margin-top: 50px;
   background-color: #fff;
   color: #333;
   h1 {
@@ -36,6 +36,7 @@ body {
   margin-top: 150px;
   text-align: center;
   padding-bottom: 100px;
+  margin-bottom: -100px;
 
   h1 {
     background-color: #333;
@@ -50,6 +51,18 @@ body {
     background-color: #fff;
     color: #fff;
   }
+}
+
+.contest-overviuw{
+  background-color: #fff;
+  color: #000;
+  img{
+  height: 100%;
+    width: 100%;
+  }
+}
+.float-left{
+  text-align: left;
 }
 
 $grade: -35deg;
@@ -122,11 +135,23 @@ $grade: -35deg;
         color: rgba(255, 255, 255, 1);
       }
     }
-
-    .btn{
+    .btn-cocacola{
       background-color: #e61a27 ;
-      color: #fff;
+        color: #fff;
     }
+
+
+    //.btn{
+    //  background-color: #e61a27 ;
+    //  color: #fff;
+    //}
+    //button{
+    //  .btn-primary{
+    //    background-color: #e61a27 ;
+    //    color: #fff;
+    //  }
+    //}
+
 
 
 
@@ -146,6 +171,36 @@ $grade: -35deg;
   }
 
 }
+
+.btn-primary{
+  background-color: #e61a27;
+  color: rgba(255, 255, 255, 1);
+  font-size: 25px;
+}
+
+
+.panel-default > .panel-heading {
+  background-color: #e61a27;
+  color: rgba(255, 255, 255, 1);
+  border: 1px solid #e61a27;
+  font-size: 20px;
+}
+
+.panel-cocacola{
+  background-color: #e61a27;
+  color: rgba(255, 255, 255, 1);
+padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 50px;
+  border: 1px solid #e61a27;
+
+}
+.form-control:focus {
+  border-color: #e61a27;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+
 
 
 
