--- a/cocaCola/public/css/base.css
+++ b/cocaCola/public/css/base.css
@@ -5643,6 +5643,11 @@ body {
   .banner-code h2 {
     padding-top: 150px; }
 
+.top10 {
+  padding-bottom: 25px;
+  background-color: #e61a27;
+  color: #fff; }
+
 .banner {
   min-height: 100%;
   min-width: 100%;
