--- a/cocaCola/public/css/base.css
+++ b/cocaCola/public/css/base.css
@@ -5632,6 +5632,13 @@ body {
 .message {
   font-size: 35px; }
 
+.img-404 {
+  background-color: #fff; }
+  .img-404 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+
 .banner-code {
   margin-top: 50px;
   background-color: #fff;
