--- a/cocaCola/public/css/base.scss
+++ b/cocaCola/public/css/base.scss
@@ -12,7 +12,14 @@ body {
 .message {
   font-size: 35px;
 }
-
+.img-404{
+  background-color: #fff;
+  img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+  }
+}
 .banner-code {
   margin-top: 50px;
   background-color: #fff;
